# cli-zoho

./: .coverage  .gitignore  LICENSE  OAS_VALIDATION_REPORT.md  README.md  pyproject.toml
cli_zoho/: __init__.py  __main__.py  auth.py  config.py  main.py  zoho_cli_auth.py  zoho_cli_config.py  zoho_cli_main.py
cli_zoho/crm/: automation.py  automation_commands.py  bulk.py  bulk_commands.py  client.py  commands.py  composite.py  composite_commands.py  functions.py  functions_commands.py  mass.py  mass_commands.py  metadata.py  metadata_commands.py  notes.py  notes_commands.py  related.py  related_commands.py  settings.py  settings_commands.py  tags.py  tags_commands.py  trash.py  trash_commands.py  users.py  users_commands.py  zoho_cli_crm_automation.py  zoho_cli_crm_automation_commands.py  zoho_cli_crm_bulk.py  zoho_cli_crm_bulk_commands.py  zoho_cli_crm_client.py  zoho_cli_crm_commands.py  zoho_cli_crm_composite.py  zoho_cli_crm_composite_commands.py  zoho_cli_crm_functions.py  zoho_cli_crm_functions_commands.py  zoho_cli_crm_mass.py  zoho_cli_crm_mass_commands.py  zoho_cli_crm_metadata.py  zoho_cli_crm_metadata_commands.py  (+12 more)
crm-oas/: README.md
crm-oas/v8.0/: apis.json  (+104 more)
tests/: conftest.py  test_auth.py  test_automation_commands.py  test_crm_commands.py  test_crm_functions.py  test_crm_functions_commands.py  test_crm_notes_commands.py  test_crm_related_commands.py  test_crm_tags_commands.py  test_crm_trash_commands.py  test_fields.py  test_inv_commands.py  test_inv_stock_commands.py  test_metadata_commands.py  test_output.py  test_pagination.py  test_settings_commands.py
(+16 files in other folders)
