[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-zoho"
version = "0.1.0"
description = "Agent-native CLI for Zoho CRM v8 and Zoho Inventory v1"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Eduardo Mora", email = "edimora29@gmail.com"},
]
keywords = ["zoho", "crm", "inventory", "cli", "api", "agent", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "filelock>=3.12",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://github.com/emora-hash/cli-zoho"
Repository = "https://github.com/emora-hash/cli-zoho"
Issues = "https://github.com/emora-hash/cli-zoho/issues"

[project.scripts]
cli-zoho = "cli_zoho.main:cli"

[tool.pytest.ini_options]
markers = [
    "e2e: live API tests requiring Zoho credentials",
]
